--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -23,7 +23,7 @@
   <main>
     <h2>Conference Day Schedule</h2>
 
-    <table border="1">
+    <table>
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
       <thead>
         <tr>
@@ -34,32 +34,32 @@
       </thead>
       <tbody>
         <tr>
-          <td>09:00 AM - 10:00 AM</td>
+          <td>09:00 AM</td>
           <td>Opening Keynote: The Future of Tech</td>
           <td>Jane Doe</td>
         </tr>
         <tr>
-          <td>10:15 AM - 11:15 AM</td>
+          <td>10:15 AM</td>
           <td>Cybersecurity in 2025</td>
           <td>Michael Lee</td>
         </tr>
         <tr>
-          <td>11:30 AM - 12:30 PM</td>
+          <td>11:30 AM</td>
           <td>Building Scalable Web Apps</td>
           <td>Sophia Zhang</td>
         </tr>
         <tr>
-          <td>01:30 PM - 02:30 PM</td>
+          <td>01:30 PM</td>
           <td>AI Ethics and Society</td>
           <td>Dr. Linda Kumar</td>
         </tr>
         <tr>
-          <td>02:45 PM - 03:45 PM</td>
-          <td>Panel Discussion: Women in Tech</td>
-          <td>Multiple Speakers</td>
+          <td>02:45 PM</td>
+          <td>Panel: Women in Tech</td>
+          <td>Various Speakers</td>
         </tr>
         <tr>
-          <td>04:00 PM - 05:00 PM</td>
+          <td>04:00 PM</td>
           <td>Closing Remarks & Networking</td>
           <td>TechCon Organizers</td>
         </tr>
