--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -33,43 +33,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>09:00 AM</td>
-          <td>Opening Keynote: The Future of Tech</td>
-          <td>Jane Doe</td>
-        </tr>
-        <tr>
-          <td>10:15 AM</td>
-          <td>Cybersecurity in 2025</td>
-          <td>Michael Lee</td>
-        </tr>
-        <tr>
-          <td>11:30 AM</td>
-          <td>Building Scalable Web Apps</td>
-          <td>Sophia Zhang</td>
-        </tr>
-        <tr>
-          <td>01:30 PM</td>
-          <td>AI Ethics and Society</td>
-          <td>Dr. Linda Kumar</td>
-        </tr>
-        <tr>
-          <td>02:45 PM</td>
-          <td>Panel: Women in Tech</td>
-          <td>Various Speakers</td>
-        </tr>
-        <tr>
-          <td>04:00 PM</td>
-          <td>Closing Remarks & Networking</td>
-          <td>TechCon Organizers</td>
-        </tr>
+        <tr><td>09:00 AM</td><td>Opening Keynote: The Future of Tech</td><td>Jane Doe</td></tr>
+        <tr><td>10:15 AM</td><td>Cybersecurity in 2025</td><td>Michael Lee</td></tr>
+        <tr><td>11:30 AM</td><td>Building Scalable Web Apps</td><td>Sophia Zhang</td></tr>
+        <tr><td>01:30 PM</td><td>AI Ethics and Society</td><td>Dr. Linda Kumar</td></tr>
+        <tr><td>02:45 PM</td><td>Panel: Women in Tech</td><td>Various Speakers</td></tr>
+        <tr><td>04:00 PM</td><td>Closing Remarks & Networking</td><td>TechCon Organizers</td></tr>
       </tbody>
     </table>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+    <p>© 2024 TechCon. All rights reserved. copyright.</p>
   </footer>
 
 </body>
